--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	    <div class="container">
 	        <h1>Young Entrepreneur Network</h1>
 	        <p><strong>Empowering Visionaries, Building the Future.</strong></p>
-	        <p>Are you an ambitious entrepreneur looking for a supportive community? The **Young Entrepreneur Network** is your gateway to mentorship, collaboration, and business growth.</p>
+	        <p>Are you an ambitious entrepreneur looking for a supportive community? The <b>Young Entrepreneur Network</b> is your gateway to mentorship, collaboration, and business growth.</p>
 	        
 	        <div class="features">
 	            <h2>Why Join Us?</h2>
