--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 	            </ul>
 	        </div>
 	        
-	        <p>Join our growing community and take your business to new heights. Whether you're a startup founder, freelancer, or business enthusiast, **Young Entrepreneur Network** provides the tools and support you need.</p>
+	        <p>Join our growing community and take your business to new heights. Whether you're a startup founder, freelancer, or business enthusiast, <b>Young Entrepreneur Network</b> provides the tools and support you need.</p>
 	        
 	        <a href="mailto:support@alreflections.net" class="cta">Join Us Now</a>
 	    </div>
